Curso entities, repositories, persistance and test